--- a/src/scss/variables/_variables.scss
+++ b/src/scss/variables/_variables.scss
@@ -1,4 +1,4 @@
-@import 'colors';
-@import 'breakpoints';
-@import 'spacing';
-@import 'type';
+@import "colors";
+// @import 'breakpoints';
+// @import 'spacing';
+@import "type";
