--- a/src/scss/pages/_globals.scss
+++ b/src/scss/pages/_globals.scss
@@ -1,3 +1,3 @@
-main div.container, main div.container-fluid {
-    margin-bottom: 4rem;
-}
+// main div.container, main div.container-fluid {
+//     margin-bottom: 4rem;
+// }
