--- a/src/scss/sections/_bannerpane.scss
+++ b/src/scss/sections/_bannerpane.scss
@@ -1,10 +1,10 @@
-.bannerpane {
-  background:$secondary-color;
-  background:linear-gradient(135deg, darken($secondary-color, 20%) 0%, $secondary-color 50%, lighten($secondary-color, 20%) 100%);
-  color:white;
-  
-  div[class*='col-'] {
-    padding-top:6rem;
-    padding-bottom:6rem;
-  }
-}
+// .bannerpane {
+//   background:$secondary-color;
+//   background:linear-gradient(135deg, darken($secondary-color, 20%) 0%, $secondary-color 50%, lighten($secondary-color, 20%) 100%);
+//   color:white;
+
+//   div[class*='col-'] {
+//     padding-top:6rem;
+//     padding-bottom:6rem;
+//   }
+// }
