--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -1,10 +1,10 @@
-// @import 'variables/bs-overrides';
-// @import 'autoload/autoload';
-// @import 'variables/variables';
-// @import 'mixins/mixins';
-// @import 'base';
-// @import 'components/components';
-// @import 'pages/pages';
-// @import 'sections/sections';
+@import "variables/bs-overrides";
+// @import "autoload/autoload";
+@import "variables/variables";
+@import "mixins/mixins";
+@import "base";
+@import "components/components";
+// @import "pages/pages";
+// @import "sections/sections";
 
 @import "tailwind/tailwind";
