--- a/src/scss/variables/_breakpoints.scss
+++ b/src/scss/variables/_breakpoints.scss
@@ -1,7 +1,7 @@
-// A copy of the bootstrap 4 breakpoints
-$breakpoints: (
-  "sm":576,
-  "md":768,
-  "lg":992,
-  "xl":1200
-);
+// // A copy of the bootstrap 4 breakpoints
+// $breakpoints: (
+//   "sm":576,
+//   "md":768,
+//   "lg":992,
+//   "xl":1200
+// );
