--- a/src/scss/variables/_colors.scss
+++ b/src/scss/variables/_colors.scss
@@ -1,12 +1,12 @@
 // Colors
-$light-grey: #e6e6e6 !default;
-$grey:#7d7d7d !default;
-$dark-grey: #333333 !default;
+// $light-grey: #e6e6e6 !default;
+// $grey: #7d7d7d !default;
+// $dark-grey: #333333 !default;
 
-$primary-color: map-get($bs-colors, 'primary') !default;
-$secondary-color: map-get($bs-colors, 'secondary')  !default;
+$primary-color: map-get($bs-colors, "primary") !default;
+$secondary-color: map-get($bs-colors, "secondary") !default;
 $tertiary-color: #462a2b !default;
 
-$border-color: #bbb !default;
-$link-color: $primary-color !default;
-$font-color: #4a4a4a !default;
+// $border-color: #bbb !default;
+// $link-color: $primary-color !default;
+// $font-color: #4a4a4a !default;
