--- a/css/tailwind.css
+++ b/css/tailwind.css
@@ -1,71 +1,8 @@
-@tailwind base;
+@import "tailwindcss/base";
+@import "./custom-base-styles/base-styles.css";
 
-@font-face {
-	font-family: "Open Sans";
-	font-style: normal;
-	font-weight: 300;
-	src: local("Open Sans Light"), local("OpenSans-Light"), url(../fonts/OpenSans-Light.woff2) format("woff2"),
-		url(../fonts/OpenSans-Light.woff) format("woff"), url(../fonts/OpenSans-Light.ttf) format("ttf");
-}
+@import "tailwindcss/components";
+@import "./custom-components/components.css";
 
-@font-face {
-	font-family: "Open Sans";
-	font-style: normal;
-	font-weight: 400;
-	src: local("Open Sans Regular"), local("OpenSans-Regular"), url(../fonts/OpenSans-Regular.woff2) format("woff2"),
-		url(../fonts/OpenSans-Regular.woff) format("woff"), url(../fonts/OpenSans-Regular.ttf) format("ttf");
-}
-
-@font-face {
-	font-family: "Open Sans";
-	font-style: normal;
-	font-weight: 600;
-	src: local("Open Sans SemiBold"), local("OpenSans-SemiBold"), url(../fonts/OpenSans-SemiBold.woff2) format("woff2"),
-		url(../fonts/OpenSans-SemiBold.woff) format("woff"), url(../fonts/OpenSans-SemiBold.ttf) format("ttf");
-}
-
-@font-face {
-	font-family: "Open Sans";
-	font-style: normal;
-	font-weight: 700;
-	src: local("Open Sans Bold"), local("OpenSans-Bold"), url(../fonts/OpenSans-Bold.woff2) format("woff2"),
-		url(../fonts/OpenSans-Bold.woff) format("woff"), url(../fonts/OpenSans-Bold.ttf) format("ttf");
-}
-
-@font-face {
-	font-family: "Open Sans";
-	font-style: normal;
-	font-weight: 800;
-	src: local("Open Sans ExtraBold"), local("OpenSans-ExtraBold"), url(../fonts/OpenSans-ExtraBold.woff2) format("woff2"),
-		url(../fonts/OpenSans-ExtraBold.woff) format("woff"), url(../fonts/OpenSans-ExtraBold.ttf) format("ttf");
-}
-
-body {
-	@apply antialiased font-open_sans;
-}
-
-@tailwind components;
-
-.hide-if-empty:empty {
-	@apply hidden;
-}
-
-.btn {
-	@apply inline-block px-3 py-2 mb-0 font-medium leading-5 text-left border-transparent border-solid rounded-sm cursor-pointer font-open_sans;
-	-ms-touch-action: manipulation;
-	touch-action: manipulation;
-	-webkit-user-select: none;
-	-moz-user-select: none;
-	-ms-user-select: none;
-	user-select: none;
-}
-
-.btn-primary {
-	@apply text-white bg-red-600;
-}
-
-.btn:hover {
-	@apply bg-dnnbrown-500;
-}
-
-@tailwind utilities;
+@import "tailwindcss/utilities";
+@import "./custom-utilities/utilities.css";
