Added dnn base components

--- a/src/css/tailwind.css
+++ b/src/css/tailwind.css
@@ -4,6 +4,7 @@
 
 @import "tailwindcss/components";
 @import "./custom-components/components.css";
+@import "./dnn-base-styles/dnn-base-styles.css";
 
 @import "tailwindcss/utilities";
 @import "./custom-utilities/utilities.css";
