--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -33,7 +33,7 @@
     <div id="content-wrapper">
       <div class="inner clearfix">
         <section id="main-content">
-          <a href="https://www.nvquicktheme.com" rel="noopener noreferrer" target="_blank"><img alt="nvQuickTheme" src="https://www.nvquicktheme.com/portals/0/nvQuickTheme_logo.png" /></a>
+          <a href="https://www.nvquicktheme.com" rel="noopener noreferrer" target="_blank"><img alt="nvQuickTheme" src="https://www.github.com/skrantzman/DNN_Tailwind/images/DNN_Tailwind.png" /></a>
 
           {{ content }}
         </section>
