--- a/docs/_sass/variables.scss
+++ b/docs/_sass/variables.scss
@@ -4,8 +4,8 @@ $medium-breakpoint: 42em !default;
 
 // Headers
 $header-heading-color: #fff !default;
-$header-bg-color: #159957 !default;
-$header-bg-color-secondary: #155799 !default;
+$header-bg-color: #48ceff !default;
+$header-bg-color-secondary: #007ca9 !default;
 
 // Text
 $section-headings-color: #159957 !default;
