--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -38,6 +38,32 @@
     <main id="content" class="main-content" role="main">
       {{ content }}
 
+        <aside id="sidebar">
+          {% for item in site.data.nav.menu %}
+            <h3>{{ item.title }}</h3>
+              <ul>
+                {% for entry in item.subfolderitems %}
+                  <li><a href="{{ entry.url }}">{{ entry.page }}</a></li>
+                {% endfor %}
+              </ul>
+          {% endfor %}
+          {% if site.show_downloads %}
+            <a href="{{ site.github.zip_url }}" class="button">
+              <small>Download</small>
+              .zip file
+            </a>
+            <a href="{{ site.github.tar_url }}" class="button">
+              <small>Download</small>
+              .tar.gz file
+            </a>
+          {% endif %}
+
+          {% if site.github.is_project_page %}
+            <p class="repo-owner"><a href="{{ site.github.repository_url }}">{{ site.github.repository_name }}</a> is maintained by <a href="{{ site.github.owner_url }}">{{ site.github.owner_name }}</a>.</p>
+          {% endif %}
+
+        </aside>    
+
       <footer class="site-footer">
         {% if site.github.is_project_page %}
           <span class="site-footer-owner"><a href="{{ site.github.repository_url }}">{{ site.github.repository_name }}</a> is maintained by <a href="{{ site.github.owner_url }}">{{ site.github.owner_name }}</a>.</span>
