--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -23,8 +23,7 @@
     <a id="skip-to-content" href="#content">Skip to the content.</a>
 
     <header class="page-header" role="banner">
-      <!-- <h1 class="project-name">{{ page.title | default: site.title | default: site.github.repository_name }}</h1> -->
-      <img src="https://raw.githubusercontent.com/skrantzman/DNN_Tailwind/master/images/DNN_Tailwind.svg" alt="DNN_Tailwind Logo" style="max-width: 600px;">
+      <h1 class="project-name">{{ page.title | default: site.title | default: site.github.repository_name }}</h1>
       <h2 class="project-tagline">{{ page.description | default: site.description | default: site.github.project_tagline }}</h2>
       {% if site.github.is_project_page %}
         <a href="{{ site.github.repository_url }}" class="btn">View on GitHub</a>
@@ -36,6 +35,8 @@
     </header>
 
     <main id="content" class="main-content" role="main">
+      <img src="https://raw.githubusercontent.com/skrantzman/DNN_Tailwind/master/images/DNN_Tailwind.svg" alt="DNN_Tailwind Logo" style="max-width: 600px;">      
+
       {{ content }}
 
         <aside id="sidebar">
