Revert "Moved image below header"
This reverts commit acb5e0a7251b2a64121cd3f37e11eefb09c7f504.

--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -36,7 +36,7 @@
     </header>
 
     <main id="content" class="main-content" role="main">
-      <h2>{{ page.title | default: site.title | default: site.github.repository_name }}</h2>
+      <h2 class="project-name">{{ page.title | default: site.title | default: site.github.repository_name }}</h2>
       {{ content }}
 
         <aside id="sidebar">
