--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -37,6 +37,14 @@
         </section>
 
         <aside id="sidebar">
+          {% for item in site.data.nav.menu %}
+            <h3>{{ item.title }}</h3>
+              <ul>
+                {% for entry in item.subfolderitems %}
+                  <li><a href="{{ entry.url }}">{{ entry.page }}</a></li>
+                {% endfor %}
+              </ul>
+          {% endfor %}
           {% if site.show_downloads %}
             <a href="{{ site.github.zip_url }}" class="button">
               <small>Download</small>
