--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -33,6 +33,7 @@
     <div id="content-wrapper">
       <div class="clearfix inner">
         <section id="main-content">
+          <h2 class="project-name">{{ page.title | default: site.title | default: site.github.repository_name }}</h2>
           {{ content }}
         </section>
 
