--- a/docs/_sass/jekyll-theme-architect.scss
+++ b/docs/_sass/jekyll-theme-architect.scss
@@ -73,6 +73,10 @@ header h2 {
 	max-width: 100%;
 }
 
+.project-name {
+	font-size: 18px;
+}
+
 aside#sidebar {
 	float: right;
 	width: 200px;
@@ -198,12 +202,12 @@ form {
 	letter-spacing: -1px;
 }
 
-#main-content h1:before {
-	padding-right: 0.3em;
-	margin-left: -0.9em;
-	color: #9ddcff;
-	content: "/";
-}
+// #main-content h1:before {
+// 	padding-right: 0.3em;
+// 	margin-left: -0.9em;
+// 	color: #9ddcff;
+// 	content: "/";
+// }
 
 #main-content h2 {
 	margin-bottom: 8px;
@@ -213,12 +217,12 @@ form {
 	color: #474747;
 	text-indent: 4px;
 }
-#main-content h2:before {
-	padding-right: 0.3em;
-	margin-left: -1.5em;
-	content: "//";
-	color: #9ddcff;
-}
+// #main-content h2:before {
+// 	padding-right: 0.3em;
+// 	margin-left: -1.5em;
+// 	content: "//";
+// 	color: #9ddcff;
+// }
 
 #main-content h3 {
 	margin-top: 24px;
@@ -230,12 +234,12 @@ form {
 	text-indent: 3px;
 }
 
-#main-content h3:before {
-	padding-right: 0.3em;
-	margin-left: -2em;
-	content: "///";
-	color: #9ddcff;
-}
+// #main-content h3:before {
+// 	padding-right: 0.3em;
+// 	margin-left: -2em;
+// 	content: "///";
+// 	color: #9ddcff;
+// }
 
 #main-content h4 {
 	margin-bottom: 8px;
@@ -246,12 +250,12 @@ form {
 	text-indent: 3px;
 }
 
-h4:before {
-	padding-right: 0.3em;
-	margin-left: -2.8em;
-	content: "////";
-	color: #9ddcff;
-}
+// h4:before {
+// 	padding-right: 0.3em;
+// 	margin-left: -2.8em;
+// 	content: "////";
+// 	color: #9ddcff;
+// }
 
 #main-content h5 {
 	margin-bottom: 8px;
@@ -260,12 +264,12 @@ h4:before {
 	color: #474747;
 	text-indent: 3px;
 }
-h5:before {
-	padding-right: 0.3em;
-	margin-left: -3.2em;
-	content: "/////";
-	color: #9ddcff;
-}
+// h5:before {
+// 	padding-right: 0.3em;
+// 	margin-left: -3.2em;
+// 	content: "/////";
+// 	color: #9ddcff;
+// }
 
 #main-content h6 {
 	margin-bottom: 8px;
@@ -274,12 +278,12 @@ h5:before {
 	color: #474747;
 	text-indent: 3px;
 }
-h6:before {
-	padding-right: 0.3em;
-	margin-left: -3.7em;
-	content: "//////";
-	color: #9ddcff;
-}
+// h6:before {
+// 	padding-right: 0.3em;
+// 	margin-left: -3.7em;
+// 	content: "//////";
+// 	color: #9ddcff;
+// }
 
 p {
 	margin-bottom: 20px;
