--- a/docs/_sass/jekyll-theme-architect.scss
+++ b/docs/_sass/jekyll-theme-architect.scss
@@ -26,8 +26,9 @@ a:hover {
 header {
 	padding-top: 40px;
 	padding-bottom: 40px;
-	font-family: "Architects Daughter", "Helvetica Neue", Helvetica, Arial, serif;
-	background: #2e7bcf url(../images/header-bg.jpg) 0 0 repeat-x;
+	// font-family: "Architects Daughter", "Helvetica Neue", Helvetica, Arial, serif;
+	// background: #2e7bcf url(../images/header-bg.jpg) 0 0 repeat-x;
+	background-image: linear-gradient(120deg, #00a4e4, #48ceff);
 	border-bottom: solid 1px #275da1;
 }
 
@@ -49,7 +50,7 @@ header h2 {
 	font-size: 26px;
 	font-weight: normal;
 	line-height: 1.3;
-	color: #9ddcff;
+	color: #fff;
 	letter-spacing: 0;
 }
 
@@ -130,8 +131,8 @@ pre {
 }
 
 code {
-	padding: 0 3px;
-	background-color: #f2f8fc;
+	padding: 5px 8px;
+	background-color: #e0e6fa;
 	border: solid 1px #dbe7f3;
 }
 
@@ -190,10 +191,10 @@ form {
 #main-content h1 {
 	margin-top: 0;
 	margin-bottom: 0;
-	font-family: "Architects Daughter", "Helvetica Neue", Helvetica, Arial, serif;
+	// font-family: "Architects Daughter", "Helvetica Neue", Helvetica, Arial, serif;
 	font-size: 2.8em;
 	font-weight: normal;
-	color: #474747;
+	color: #00a4e4;
 	text-indent: 6px;
 	letter-spacing: -1px;
 }
@@ -207,10 +208,10 @@ form {
 
 #main-content h2 {
 	margin-bottom: 8px;
-	font-family: "Architects Daughter", "Helvetica Neue", Helvetica, Arial, serif;
+	// font-family: "Architects Daughter", "Helvetica Neue", Helvetica, Arial, serif;
 	font-size: 22px;
 	font-weight: bold;
-	color: #474747;
+	color: #00a4e4;
 	text-indent: 4px;
 }
 // #main-content h2:before {
@@ -223,10 +224,10 @@ form {
 #main-content h3 {
 	margin-top: 24px;
 	margin-bottom: 8px;
-	font-family: "Architects Daughter", "Helvetica Neue", Helvetica, Arial, serif;
+	// font-family: "Architects Daughter", "Helvetica Neue", Helvetica, Arial, serif;
 	font-size: 18px;
 	font-weight: bold;
-	color: #474747;
+	color: #00a4e4;
 	text-indent: 3px;
 }
 
@@ -239,10 +240,10 @@ form {
 
 #main-content h4 {
 	margin-bottom: 8px;
-	font-family: "Architects Daughter", "Helvetica Neue", Helvetica, Arial, serif;
+	// font-family: "Architects Daughter", "Helvetica Neue", Helvetica, Arial, serif;
 	font-size: 15px;
 	font-weight: bold;
-	color: #474747;
+	color: #00a4e4;
 	text-indent: 3px;
 }
 
@@ -255,9 +256,9 @@ form {
 
 #main-content h5 {
 	margin-bottom: 8px;
-	font-family: "Architects Daughter", "Helvetica Neue", Helvetica, Arial, serif;
+	// font-family: "Architects Daughter", "Helvetica Neue", Helvetica, Arial, serif;
 	font-size: 14px;
-	color: #474747;
+	color: #00a4e4;
 	text-indent: 3px;
 }
 // h5:before {
@@ -269,9 +270,9 @@ form {
 
 #main-content h6 {
 	margin-bottom: 8px;
-	font-family: "Architects Daughter", "Helvetica Neue", Helvetica, Arial, serif;
+	// font-family: "Architects Daughter", "Helvetica Neue", Helvetica, Arial, serif;
 	font-size: 0.8em;
-	color: #474747;
+	color: #00a4e4;
 	text-indent: 3px;
 }
 // h6:before {
@@ -334,6 +335,7 @@ footer a:hover {
 
 h2.project-name {
 	font-size: 32px;
+	color: #007ca9;
 }
 
 /* MISC */
