--- a/docs/_sass/jekyll-theme-architect.scss
+++ b/docs/_sass/jekyll-theme-architect.scss
@@ -47,10 +47,10 @@ header h2 {
 	width: 540px;
 	margin-top: 0;
 	margin-bottom: 0;
-	font-size: 26px;
+	font-size: 22px;
 	font-weight: normal;
 	line-height: 1.3;
-	color: #fff;
+	color: #e8f8ff;
 	letter-spacing: 0;
 }
 
