Lightened page name color

--- a/docs/_sass/jekyll-theme-architect.scss
+++ b/docs/_sass/jekyll-theme-architect.scss
@@ -132,7 +132,7 @@ pre {
 
 code {
 	padding: 5px 8px;
-	background-color: #e0e6fa;
+	background-color: #e0f0fa;
 	border: solid 1px #dbe7f3;
 }
 
@@ -335,7 +335,7 @@ footer a:hover {
 
 h2.project-name {
 	font-size: 32px;
-	color: #007ca9;
+	color: #00a4e4;
 }
 
 /* MISC */
