--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -19,9 +19,8 @@
       <div class="inner">
         <a href="{{ '/' | absolute_url }}">
           <!-- <h1>{{ site.title | default: site.github.repository_name }}</h1> -->
-          <img src="https://raw.githubusercontent.com/skrantzman/DNN_Tailwind/master/images/DNN_Tailwind.svg" alt="DNN_Tailwind logo" style="max-width: 500px;">
+          <img src="https://raw.githubusercontent.com/skrantzman/DNN_Tailwind/master/images/DNN_Tailwind.svg" alt="DNN_Tailwind logo" style="max-width: 500px; margin-bottom: 20px">
         </a>
-        <br>
         <h2>{{ site.description | default: site.github.project_tagline }}</h2>
         {% if site.github.is_project_page %}
           <a href="{{ site.github.repository_url }}" class="button"><small>View project on</small> GitHub</a>
