--- a/src/css/custom-base-styles/fonts.css
+++ b/src/css/custom-base-styles/fonts.css
@@ -5,6 +5,7 @@
 	src: url("../fonts/OpenSans-Light.eot");
 	src: local("Open Sans Light"), local("OpenSans-Light"), url(../fonts/OpenSans-Light.woff2) format("woff2"),
 		url(../fonts/OpenSans-Light.woff) format("woff"), url(../fonts/OpenSans-Light.ttf) format("ttf");
+	font-display: swap;
 }
 
 @font-face {
@@ -14,6 +15,7 @@
 	src: url("../fonts/OpenSans-Regular.eot");
 	src: local("Open Sans Regular"), local("OpenSans-Regular"), url(../fonts/OpenSans-Regular.woff2) format("woff2"),
 		url(../fonts/OpenSans-Regular.woff) format("woff"), url(../fonts/OpenSans-Regular.ttf) format("ttf");
+	font-display: swap;
 }
 
 @font-face {
@@ -23,6 +25,7 @@
 	src: url("../fonts/OpenSans-SemiBold.eot");
 	src: local("Open Sans SemiBold"), local("OpenSans-SemiBold"), url(../fonts/OpenSans-SemiBold.woff2) format("woff2"),
 		url(../fonts/OpenSans-SemiBold.woff) format("woff"), url(../fonts/OpenSans-SemiBold.ttf) format("ttf");
+	font-display: swap;
 }
 
 @font-face {
@@ -32,6 +35,7 @@
 	src: url("../fonts/OpenSans-Bold.eot");
 	src: local("Open Sans Bold"), local("OpenSans-Bold"), url(../fonts/OpenSans-Bold.woff2) format("woff2"),
 		url(../fonts/OpenSans-Bold.woff) format("woff"), url(../fonts/OpenSans-Bold.ttf) format("ttf");
+	font-display: swap;
 }
 
 @font-face {
@@ -41,4 +45,5 @@
 	src: url("../fonts/OpenSans-ExtraBold.eot");
 	src: local("Open Sans ExtraBold"), local("OpenSans-ExtraBold"), url(../fonts/OpenSans-ExtraBold.woff2) format("woff2"),
 		url(../fonts/OpenSans-ExtraBold.woff) format("woff"), url(../fonts/OpenSans-ExtraBold.ttf) format("ttf");
+	font-display: swap;
 }
